# opengl-paint-test

./: .gitignore  CMakeLists.txt  README.md  shaderf.glsl  shaderv.glsl
src/: main.cpp
